--- a/roles/conjur/tasks/main.yml
+++ b/roles/conjur/tasks/main.yml
@@ -52,34 +52,6 @@
           app: conjur-postgres
         type: ClusterIP
 
-
-# - name: create conjur postgres database deployment
-#   k8s:
-#     definition:
-#       apiVersion: apps/v1
-#       kind: Deployment
-#       metadata:
-#         name: conjur-postgres
-#         namespace: "{{ meta.namespace }}"
-#         labels:
-#           app: conjur-postgres
-#       spec:
-#         selector:
-#           matchLabels:
-#             app: conjur-postgres
-#             name: conjur-postgres
-#         replicas: 1
-#         template:
-#           metadata:
-#             labels:
-#               app: conjur-postgres
-#               name: conjur-postgres
-#           spec:
-#             containers:
-#             - image: "{{ postgres_image }}"
-#               imagePullPolicy: "{{ image_pull_policy }}"
-#               name: postgres
-
 - name: create conjur postgres database deployment
   k8s:
     definition:
@@ -87,6 +59,7 @@
       kind: Deployment
       metadata:
         name: conjur-postgres
+        namespace: "{{ meta.namespace }}"
         labels:
           app: conjur-postgres
       spec:
@@ -101,32 +74,57 @@
               app: conjur-postgres
               name: conjur-postgres
           spec:
-            serviceAccountName: postgres
             containers:
-            - image: centos/postgresql-10-centos7:latest
-              imagePullPolicy: "{{ IMAGE_PULL_POLICY }}"
-              name: conjur-postgres
-              ### If no persistency is needed, start commenting from here ###
-              volumeMounts:
-              - mountPath: /var/lib/pgsql/data/userdata
-                name: postgresdb
-                readOnly: false
-              securityContext:
-                runAsUser: 65534
-              ### End commenting here ##
-              env:
-              - name: POSTGRESQL_ADMIN_PASSWORD
-                valueFrom:
-                    secretKeyRef:
-                      name: postgres-admin-password
-                      key: POSTGRESQL_ADMIN_PASSWORD
-            ### If no persistency is needed, start commenting from here ###
-            volumes:
-            - name: postgresdb
-              persistentVolumeClaim:
-                claimName: postgres-pv-claim
-            ### End commenting here ##
+            - image: "{{ postgres_image }}"
+              imagePullPolicy: "{{ image_pull_policy }}"
+              name: postgres
 
+# - name: create conjur postgres database deployment
+#   k8s:
+#     definition:
+#       apiVersion: apps/v1
+#       kind: Deployment
+#       metadata:
+#         name: conjur-postgres
+#         labels:
+#           app: conjur-postgres
+#       spec:
+#         selector:
+#           matchLabels:
+#             app: conjur-postgres
+#             name: conjur-postgres
+#         replicas: 1
+#         template:
+#           metadata:
+#             labels:
+#               app: conjur-postgres
+#               name: conjur-postgres
+#           spec:
+#             serviceAccountName: postgres
+#             containers:
+#             - image: centos/postgresql-10-centos7:latest
+#               imagePullPolicy: "{{ IMAGE_PULL_POLICY }}"
+#               name: conjur-postgres
+#               ### If no persistency is needed, start commenting from here ###
+#               volumeMounts:
+#               - mountPath: /var/lib/pgsql/data/userdata
+#                 name: postgresdb
+#                 readOnly: false
+#               securityContext:
+#                 runAsUser: 65534
+#               ### End commenting here ##
+#               env:
+#               - name: POSTGRESQL_ADMIN_PASSWORD
+#                 valueFrom:
+#                     secretKeyRef:
+#                       name: postgres-admin-password
+#                       key: POSTGRESQL_ADMIN_PASSWORD
+#             ### If no persistency is needed, start commenting from here ###
+#             volumes:
+#             - name: postgresdb
+#               persistentVolumeClaim:
+#                 claimName: postgres-pv-claim
+#             ### End commenting here ##
 
 - name: create conjur cluster service
   k8s:
