include postgres service account

--- a/bootstrap.env
+++ b/bootstrap.env
@@ -7,3 +7,4 @@ export CONJUR_ACCOUNT=conjur
 export OFFLINE_MODE=true
 export CONJUR_VERSION=5.3.1
 export SECRET_NAME=dockerpullsecret
+export POSTGRES_SERVICEACCOUNT_NAME=conjur-postgres
