comment out persistent

--- a/roles/conjur/tasks/main.yml
+++ b/roles/conjur/tasks/main.yml
@@ -1,40 +1,3 @@
-- name: create postgres persistent volume
-  k8s:
-    definition:
-      kind: PersistentVolume
-      apiVersion: v1
-      metadata:
-        name: postgres-pv-volume
-        labels:
-          type: local
-          app: conjur-postgres
-      spec:
-        capacity:
-          storage: 10Gi
-        accessModes:
-          - ReadWriteMany
-        nfs:
-          path: "{{ nfs_path }}"
-          server: "{{ nfs_address }}" # NFS server IP
-        persistentVolumeReclaimPolicy: Retain
-
-- name: create postgres persistent volume claim
-  k8s:
-    definition:
-      kind: PersistentVolumeClaim
-      apiVersion: v1
-      metadata:
-        name: postgres-pv-claim
-        labels:
-          app: conjur-postgres
-      spec:
-        accessModes:
-          - ReadWriteMany
-        resources:
-          requests:
-            storage: 2Gi
-          volumeName: postgres-pv-volume
-
 - name: create conjur postgres service
   k8s:
     definition:
@@ -78,6 +41,44 @@
             - image: "{{ postgres_image }}"
               imagePullPolicy: "{{ image_pull_policy }}"
               name: postgres
+
+# ALL COMMENTS BELOW RELATE TO postgres persitent volume that has not yet been implemented
+# - name: create postgres persistent volume
+#   k8s:
+#     definition:
+#       kind: PersistentVolume
+#       apiVersion: v1
+#       metadata:
+#         name: postgres-pv-volume
+#         labels:
+#           type: local
+#           app: conjur-postgres
+#       spec:
+#         capacity:
+#           storage: 10Gi
+#         accessModes:
+#           - ReadWriteMany
+#         nfs:
+#           path: "{{ nfs_path }}"
+#           server: "{{ nfs_address }}" # NFS server IP
+#         persistentVolumeReclaimPolicy: Retain
+
+# - name: create postgres persistent volume claim
+#   k8s:
+#     definition:
+#       kind: PersistentVolumeClaim
+#       apiVersion: v1
+#       metadata:
+#         name: postgres-pv-claim
+#         labels:
+#           app: conjur-postgres
+#       spec:
+#         accessModes:
+#           - ReadWriteMany
+#         resources:
+#           requests:
+#             storage: 2Gi
+#           volumeName: postgres-pv-volume
 
 # - name: create conjur postgres database deployment
 #   k8s:
